#4622# Updates to ru_RU

--- a/locale/ru_RU/admin.xml
+++ b/locale/ru_RU/admin.xml
@@ -14,23 +14,29 @@
 
 <locale name="ru_RU" full_name = "Russian">
 	<message key="admin.adminFunctions">Административные функции</message>
-	<message key="admin.clearTemplateCache">Упразднить кеш шаблона</message>
-	<message key="admin.configFileUpdatedInstructions"><![CDATA[Ваш конфиг файл не был обновлен. Чтобы применить настройки, Вам нужно открыть  <tt>config.inc.php</tt> в соотв. текстовом редакторе и заполнить все нужные поля.]]></message>
+	<message key="admin.auth.confirmDelete">Вы уверены, что хотите удалить эту базу учетных записей ?</message>
+	<message key="admin.auth.create">Определить новую базу учетных записей</message>
+	<message key="admin.auth.noneCreated">База учетных записей не определена.</message>
+	<message key="admin.authSources">Базы учетных записей</message>
+	<message key="admin.clearDataCache">Очистить кеш данных</message>
+	<message key="admin.clearTemplateCache">Очистить кеш шаблонов</message>
+	<message key="admin.configFileUpdatedInstructions"><![CDATA[Ваш конфигурационный файл не был обновлен. Чтобы применить настройки, Вам нужно открыть  <tt>config.inc.php</tt> в текстовом редакторе и заполнить все нужные поля.]]></message>
 	<message key="admin.confirmClearTemplateCache">Вы действительно хотите упразднить кеш шаблона?</message>
 	<message key="admin.confirmExpireSessions">Вы уверены, что хотите прекратить сессии? Все пользователи должны будут авторизоваться заново (в том числе и Вы).</message>
 	<message key="admin.contentsOfConfigFile">Содержание конфиг файла</message>
-	<message key="admin.currentVersion">Актуальная версия</message>
+	<message key="admin.currentVersion">Установленная версия</message>
 	<message key="admin.dateInstalled">Дата установки</message>
-	<message key="admin.displayConfigFileInstructions"><![CDATA[Содержание конфиг файла показано внизу. Чтобы применить настройки, Вам нужно открыть  <tt>config.inc.php</tt> в соотв. текстовом редакторе и заполнить все нужные поля, используя данные внизу.]]></message>
+	<message key="admin.displayConfigFileInstructions"><![CDATA[Содержание конфигурационного файла показано внизу. Чтобы применить настройки, Вам нужно открыть  <tt>config.inc.php</tt> в текстовом редакторе и заполнить все нужные поля, используя нижеприведенные данные.]]></message>
 	<message key="admin.displayNewSystemConfig">Показать новые настройки</message>
 	<message key="admin.expireSessions">Прекратить пользовательские сессии</message>
 	<message key="admin.languages.confirmReload">Вы уверены, что хотите загрузить этот языковой файл? Это действие сотрет все специфические языковые шаблоны.</message>
-	<message key="admin.languages.installedLocales">Инсталированные языки</message>
-	<message key="admin.languages.installLocales">Install</message>
-	<message key="admin.languages.installNewLocales">Инсталировать новые языки</message>
+	<message key="admin.languages.installedLocales">Установленные языки</message>
+	<message key="admin.languages.installLanguages">Управление языками</message>
+	<message key="admin.languages.installLocales">Установить</message>
+	<message key="admin.languages.installNewLocales">Установить новые языки</message>
 	<message key="admin.languages.languageSettings">Настройки языков</message>
-	<message key="admin.languages.noLocalesAvailable">Нет дополнительных языков для инсталяции.</message>
-	<message key="admin.languages.reload">Загрузить язык</message>
+	<message key="admin.languages.noLocalesAvailable">Нет дополнительных языков для установки.</message>
+	<message key="admin.languages.reload">Обновить локаль в памяти</message>
 	<message key="admin.languages.uninstall">Деинсталировать язык</message>
 	<message key="admin.phpInfo">Extended PHP Information</message>
 	<message key="admin.saveSystemConfig">Сохранить настройки</message>
@@ -42,17 +48,21 @@
 	<message key="admin.server.phpVersion">PHP version</message>
 	<message key="admin.server.platform">OS platform</message>
 	<message key="admin.settings.aboutDescription">Описание сайта</message>
-	<message key="admin.settings.contactEmail">Мейл главного редактора</message>
+	<message key="admin.settings.contactEmail">E-mail главного редактора</message>
 	<message key="admin.settings.contactName">Имя главного редактора</message>
-	<message key="admin.settings.form.contactEmailRequired">Мейл секретаря журнала не добавлен.</message>
+	<message key="admin.settings.form.contactEmailRequired">Требуется задать электронный адрес для контактов.</message>
 	<message key="admin.settings.form.contactNameRequired">Имя секретаря журнала.</message>
 	<message key="admin.settings.form.minPasswordLengthRequired">Пароль должен содержать минимум 4 знака.</message>
 	<message key="admin.settings.form.titleRequired">Нужно название.</message>
+	<message key="admin.settings.homeHeaderImage.altText">Логотип сайта</message>
+	<message key="admin.settings.homeHeaderImageInvalid">Неверный формат логотипа. Принимаются изображения в форматах .gif, .jpg, или .png.</message>
 	<message key="admin.settings.introduction">Введение</message>
 	<message key="admin.settings.minPasswordLength">Длина пароля</message>
 	<message key="admin.settings.oaiRegistration">Регистрировать сайт для индексации (Metadata Harvesting)</message>
 	<message key="admin.settings.passwordCharacters">знаков</message>
 	<message key="admin.settings.siteLanguage">Язык сайта</message>
+	<message key="admin.settings.siteStyleSheetInvalid">Неверный формат стилевого файла. Допустим только формат .css.</message>
+	<message key="admin.settings.siteStyleSheet">Стилевой файл сайта</message>
 	<message key="admin.settings.siteTitle">Название сайта</message>
 	<message key="admin.siteAdmin">Администрация сайта</message>
 	<message key="admin.siteManagement">Управление сайтом</message>
@@ -67,7 +77,7 @@
 	<message key="admin.version.latest">Последняя версия</message>
 	<message key="admin.versionMajor">Главная</message>
 	<message key="admin.versionMinor">Незначительная</message>
-	<message key="admin.version.moreInfo">Дополнительная инфа</message>
+	<message key="admin.version.moreInfo">Дополнительная информация</message>
 	<message key="admin.versionRevision">Ревизия</message>
 	<message key="admin.version.updateAvailable">Имеется новый релиз системы</message>
 	<message key="admin.version.upToDate">Ваша система актуальна</message>
