--- a/locale/ru_RU/manager.xml
+++ b/locale/ru_RU/manager.xml
@@ -13,34 +13,86 @@
   -->
 
 <locale name="ru_RU" full_name = "Russian">
-	<message key="manager.emails.confirmDelete">Are you sure you want to delete this email template?</message>
-	<message key="manager.emails.confirmReset">Are you sure you want to reset this email template to its default values?</message>
-	<message key="manager.emails.createEmail">Create Email</message>
-	<message key="manager.emails.disable">Disable</message>
-	<message key="manager.emails.editEmail">Edit Email</message>
-	<message key="manager.emails.editTestExample">Edit Email Test Example</message>
-	<message key="manager.emails.emailKey">Email Key</message>
-	<message key="manager.emails.emailKeyExists">An email with the given key already exists. Email keys must be unique.</message>
-	<message key="manager.emails.emailTemplate">Email Template</message>
-	<message key="manager.emails.emailTemplates">Email Templates</message>
-	<message key="manager.emails.enabled">Enable this email template</message>
-	<message key="manager.emails.enable">Enable</message>
-	<message key="manager.emails.form.bodyRequired">A body is required for the email.</message>
-	<message key="manager.emails.form.subjectRequired">A subject is required for the email.</message>
-	<message key="manager.emails">Мейлы</message>
-	<message key="manager.emails.resetAll">Reset All Templates</message>
-	<message key="manager.emails.reset">Reset</message>
-	<message key="manager.emails.resetToDefault">Reset To Default</message>
-	<message key="manager.filesBrowser">Броузер файлов</message>
-	<message key="manager.files.confirmDelete">Стереть этот файл? Директория должна быть пустой, чтобы можно было ее стереть.</message>
-	<message key="manager.files.createDir">Создать директорию</message>
-	<message key="manager.files.emptyDir">Нет файлов в этой директории.</message>
+	<message key="manager.announcements">Объявления</message>
+	<message key="manager.announcements.confirmDelete">Уверены, что хотите навсегда удалить это объявление?</message>
+	<message key="manager.announcements.create">Создать новое объявление</message>
+	<message key="manager.announcements.createTitle">Создать</message>
+	<message key="manager.announcements.dateExpire">Теряет актуальность</message>
+	<message key="manager.announcements.edit">Редактировать объявление</message>
+	<message key="manager.announcements.editTitle">Редактировать</message>
+	<message key="manager.announcements.form.dateExpireDayIncompleteDate">Пожалуйста выберите год и/или месяц в добавок ко дню потери актуальности.</message>
+	<message key="manager.announcements.form.dateExpire">Дата потери актуальности</message>
+	<message key="manager.announcements.form.dateExpireInstructions">Объявление будет демонстрироваться читателям до истечения этой даты. Оставьте поле пустым для того, чтобы оставить эту дату неопределенной.</message>
+	<message key="manager.announcements.form.dateExpireMonthIncompleteDate">Пожалейста выберите год и/или день вдобавок к месяцу потери актуальности.</message>
+	<message key="manager.announcements.form.dateExpireValid">Пожалуйста введите корректную дату потери актуальности.</message>
+	<message key="manager.announcements.form.dateExpireYearIncompleteDate">Пожалуйста введите день и месяц в добавок к году потери актуальности.</message>
+	<message key="manager.announcements.form.description">Описание</message>
+	<message key="manager.announcements.form.descriptionInstructions">Полный текст обьявления.</message>
+	<message key="manager.announcements.form.descriptionRequired">Требуется описание объявления.</message>
+	<message key="manager.announcements.form.descriptionShortInstructions">Краткое описание, которое появится рядом с названием объявления.</message>
+	<message key="manager.announcements.form.descriptionShortRequired">Требуется краткое описание объявления.</message>
+	<message key="manager.announcements.form.descriptionShort">Краткое Описание</message>
+	<message key="manager.announcements.form.saveAndCreateAnother">Сохранить и Создать Другое</message>
+	<message key="manager.announcements.form.titleRequired">Требуется ввести название объявления.</message>
+	<message key="manager.announcements.form.title">Название</message>
+	<message key="manager.announcements.form.typeId">Тип</message>
+	<message key="manager.announcements.form.typeIdValid">Пожалуйста выберите правильный тип объявления.</message>
+	<message key="manager.announcements.noneCreated">Объявление создано не было.</message>
+	<message key="manager.announcements.title">Название</message>
+	<message key="manager.announcements.type">Тип</message>
+	<message key="manager.announcementTypes">Типы объявлений</message>
+	<message key="manager.announcementTypes.confirmDelete">Предупреждение! Все объявления этого типа также будут стерты. Вы уверены, что хотите продолжить и удалить этот тип объявлений?</message>
+	<message key="manager.announcementTypes.create">Создать тип объявлений</message>
+	<message key="manager.announcementTypes.createTitle">Создать</message>
+	<message key="manager.announcementTypes.edit">Редактировать тип объявлений</message>
+	<message key="manager.announcementTypes.editTitle">Редактировать</message>
+	<message key="manager.announcementTypes.form.saveAndCreateAnother">Сохранить и Создать Другое</message>
+	<message key="manager.announcementTypes.form.typeNameExists">Тип объявлений с этим именем уже существует.</message>
+	<message key="manager.announcementTypes.form.typeName">Имя</message>
+	<message key="manager.announcementTypes.form.typeNameRequired">Необходимо ввести название типа объявления.</message>
+	<message key="manager.announcementTypes.noneCreated">Тип объявлений не был создан.</message>
+	<message key="manager.announcementTypes.typeName">Тип объявлений</message>
+	<message key="manager.emails.confirmDelete">Вы уверены, что хотите удалить этот шаблон электронного письма ?</message>
+	<message key="manager.emails.confirmReset">Вы уверены, что хотите сбросить этот шаблон к его стандартному виду ?</message>
+	<message key="manager.emails.createEmail">Создать письмо</message>
+	<message key="manager.emails.disable">Выключить</message>
+	<message key="manager.emails.editEmail">Редактировать Письмо</message>
+	<message key="manager.emails.editTestExample">Редактировать Тестовый Пример</message>
+	<message key="manager.emails.emailKey">Ключ письма</message>
+	<message key="manager.emails.emailKeyExists">Письмо с данным ключом уже существует. Ключи должны быть уникальными.</message>
+	<message key="manager.emails.emailTemplate">Шаблон Письма</message>
+	<message key="manager.emails.emailTemplates">Шаблоны Писем</message>
+	<message key="manager.emails.enabled">Включить этот шаблон</message>
+	<message key="manager.emails.enable">Включить</message>
+	<message key="manager.emails.form.bodyRequired">Нужно ввести текст письма.</message>
+	<message key="manager.emails.form.subjectRequired">Тема письма необходима.</message>
+	<message key="manager.emails">Почта</message>
+	<message key="manager.emails.resetAll">Сбросить Все Шаблоны</message>
+	<message key="manager.emails.reset">Сбросить</message>
+	<message key="manager.emails.resetToDefault">Сбросить к Стандартному</message>
+	<message key="manager.filesBrowser">Выбор файлов</message>
+	<message key="manager.files.confirmDelete">Стереть этот файл? Стираемый каталог должен быть пустым.</message>
+	<message key="manager.files.createDir">Создать каталог</message>
+	<message key="manager.files.emptyDir">Нет файлов в этом каталоге.</message>
 	<message key="manager.files.indexOfDir">Индекс {$dir}</message>
 	<message key="manager.files.parentDir">Родительская директория</message>
 	<message key="manager.files.uploadedFiles">Загруженные файлы</message>
 	<message key="manager.files.uploadFile">Загрузить файл</message>
-	<message key="manager.importExport">Import/Export Data</message>
-	<message key="manager.languages.supportedLocalesInstructions">Select all locales to support on the site via a language select menu to appear on each page. The menu will only appear if more than one locale is selected.</message>
+	<message key="manager.groups.confirmDelete">Уверены, что хотите удалить эту группу?</message>
+	<message key="manager.groups.createTitle">Создать Название</message>
+	<message key="manager.groups.editTitle">Редактировать Название</message>
+	<message key="manager.groups.form.groupTitleRequired">Требуется название группы.</message>
+	<message key="manager.groups.membership.addMember">Добавить члена</message>
+	<message key="manager.groups.membership.confirmDelete">Вы уверены, что хотите удалить это членство в группе?</message>
+	<message key="manager.groups.membership">Членство</message>
+	<message key="manager.groups.membership.noneCreated">В этой группе нет членов.</message>
+	<message key="manager.groups.membership.noUsers">Пользователи не найдены.</message>
+	<message key="manager.groups.title">Название</message>
+	<message key="manager.importExport">Импортировать/Экспортировать Данные</message>
+	<message key="manager.languages.alternateLocaleInstructions">Эта система позволяет вводить некоторую важную информацию одновременно на нескольких языках. Для включения этой возможности выберите альтернативные языки и выберите вариант ниже.</message>
+	<message key="manager.languages.supportedLocalesInstructions">Выберите все локали, которые будут включены в меню выбора языка ввода на каждой форме. Это меню появится только если здесь выбрано несколько языков.</message>
+	<message key="manager.payment.timestamp">Дата/Время</message>
+	<message key="manager.people.authSource">База учетных записей</message>
 	<message key="manager.people.confirmUnenroll">Удалить этого пользователя?</message>
 	<message key="manager.people.createUser">Создать нового пользователя</message>
 	<message key="manager.people.createUserGeneratePassword">Создать случайный пароль.</message>
@@ -60,8 +112,14 @@
 	<message key="manager.people.enrollSelected">Назначить выбранных пользователей</message>
 	<message key="manager.people.enrollSyncRole">Синхронизировать роль</message>
 	<message key="manager.people.enrollSync">Синхронизировать</message>
+	<message key="manager.people.enrollUserAsDescription">Пользователей можно назначить или снять с любой роли в любое время.</message>
 	<message key="manager.people.enrollUserAs">Назначить пользователя на должность</message>
 	<message key="manager.people.invalidUser">Данный пользователь не существует.</message>
+	<message key="manager.people.mergeUser">Слияние данных о пользователе</message>
+	<message key="manager.people.mergeUsers.confirm">Вы уверены, что хотите влить данные пользователя "{$oldUsername}" в учетную запись пользователя "{$newUsername}"? Пользователь "{$oldUsername}" будет после этого удален. Это действие невозможно будет потом отменить.</message>
+	<message key="manager.people.mergeUsers">Объединить пользователей</message>
+	<message key="manager.people.mustChooseRole">Пожалуйста выберите роль вверху страницы перед тем как нажать "Привлечь пользователя".</message>
+	<message key="manager.people.mustProvideName">Пожалуйста введите хотя-бы фамилию пользователя.</message>
 	<message key="manager.people.noMatchingUsers">Нет соответствий.</message>
 	<message key="manager.people.noneEnrolled">Нет назначенных пользователей.</message>
 	<message key="manager.people">Люди</message>
@@ -72,16 +130,42 @@
 	<message key="manager.people.syncUsers">Синхронизировать назначения пользователя</message>
 	<message key="manager.people.unenroll">Уволить</message>
 	<message key="manager.people.userCreatedSuccessfully">Пользователь создан успешно.</message>
-	<message key="manager.people.userMustChangePassword">Require the user to change their password the next time they sign in.</message>
+	<message key="manager.people.userMustChangePassword">Потребовать, чтобы пользователь сменил пароль в следующий раз, когда он войдет.</message>
+	<message key="manager.plugins.action">Действие:</message>
+	<message key="manager.plugins.disable">Выключить</message>
+	<message key="manager.plugins.enable">Включить</message>
+	<message key="manager.plugins.pluginManagement">Управление Модулями</message>
+	<message key="manager.plugins.sitePlugin">Действие этого модуля распространяется на весь сайт. Только администратор сайта может изменить его параметры.</message>
+	<message key="manager.plugins">Модули</message>
 	<message key="manager.readingTools">Инструменты</message>
 	<message key="manager.roles">Роли</message>
-	<message key="manager.setup.homeHeaderImageInvalid">Invalid homepage header logo image format. Accepted formats are .gif, .jpg, or .png.</message>
-	<message key="manager.setup.homepageImageInvalid">Invalid homepage image format. Accepted formats are .gif, .jpg, or .png.</message>
-	<message key="manager.setup.homeTitleImageInvalid">Invalid homepage header title image format. Accepted formats are .gif, .jpg, or .png.</message>
+	<message key="manager.setup.homeHeaderImageInvalid">Неверный формат логотипа в заголовке домашней страницы. Поддерживаются форматы .gif, .jpg, или .png.</message>
+	<message key="manager.setup.homepageImageInvalid">Неверный формат изображения на домашней странице. Поддерживаются форматы .gif, .jpg, или .png.</message>
+	<message key="manager.setup.homeTitleImageInvalid">Неверный формат изображения в заголовке домашней страницы. Поддерживаются форматы .gif, .jpg, или .png.</message>
+	<message key="manager.setup.layout.leftSidebar">Левая Сторона</message>
+	<message key="manager.setup.layout.rightSidebar">Правая Сторона</message>
+	<message key="manager.setup.layout.unselected">Не выбрано</message>
 	<message key="manager.setup.loggingAndAuditing">Дневник событий</message>
-	<message key="manager.setup.pageHeaderLogoImageInvalid">Invalid page header logo image format. Accepted formats are .gif, .jpg, or .png.</message>
-	<message key="manager.setup.pageHeaderTitleImageInvalid">Invalid page header title image format. Accepted formats are .gif, .jpg, or .png.</message>
+	<message key="manager.setup.pageHeaderLogoImageInvalid">Неверный формат логотипа в заголовке страницы. Поддерживаются форматы .gif, .jpg, или .png.</message>
+	<message key="manager.setup.pageHeaderTitleImageInvalid">Неверный формат изображения в заголовке страницы. Поддерживаются форматы .gif, .jpg, или .png.</message>
 	<message key="manager.setup.selectOne">Выбрать</message>
-	<message key="manager.statistics">Статистика</message>
+	<message key="manager.statistics"><![CDATA[Статистика &amp; Отчеты]]></message>
+	<message key="manager.statistics.statistics.count.value">{$count} ({$percentage}%)</message>
+	<message key="manager.statistics.statistics.totalNewValue">{$numTotal} ({$numNew} новых)</message>
 	<message key="manager.users">Пользователи</message>
+	<message key="plugins.categories.auth">Модули Авторизации</message>
+	<message key="plugins.categories.blocks">Модули Блоков</message>
+	<message key="plugins.categories.blocks.description">Модули блоков -- подсоединяемые компоненты пользовательского интерфейса, такие как инструменты на боковых панелях.</message>
+	<message key="plugins.categories.citationFormats">Модули Оформления Ссылок</message>
+	<message key="plugins.categories.gateways.description">Модули Шлюзов служат для постоянной передачи в реальном времени изменяющихся данных из этой системы в другие.</message>
+	<message key="plugins.categories.gateways">Модули Шлюзов</message>
+	<message key="plugins.categories.generic">Остальные Модули</message>
+	<message key="plugins.categories.importexport.description">Модули Импорта/Экспорта служат для обмена метаданными и данными с другими системами.</message>
+	<message key="plugins.categories.importexport">Модули Импорта/Экспорта</message>
+	<message key="plugins.categories.paymethod.description">Модули Платежей реализуют поддержку различных методов проведения платежей онлайн.</message>
+	<message key="plugins.categories.paymethod">Модули Платежей</message>
+	<message key="plugins.categories.reports.description">Модули Отчетов реализуют различные виды отчетов и срезов данных.</message>
+	<message key="plugins.categories.reports">Модули Отчетов</message>
+	<message key="plugins.categories.themes.description">Модули Тем позволяют изменить внешний вид системы.</message>
+	<message key="plugins.categories.themes">Модули Тем</message>
 </locale>
