--- a/locale/ru_RU/reader.xml
+++ b/locale/ru_RU/reader.xml
@@ -16,10 +16,11 @@
 	<message key="comments.anonymous">Гость</message>
 	<message key="comments.anonymousNamed">"{$userName}"</message>
 	<message key="comments.body">Основной текст</message>
-	<message key="comments.confirmDeleteChildren">Все ответы к комментарию исчезнут тоже. Хотите ли Вы это сделать?</message>
+	<message key="comments.titleRequired">Тема комментария обязательна.</message>
+	<message key="comments.confirmDeleteChildren">Удаление комментария приведет к удалению всех ответов на него. Хотите ли Вы это сделать?</message>
 	<message key="comments.delete">Стереть комментарий</message>
-	<message key="comments.email">Мейл комментатора</message>
-	<message key="comments.emailReply">Мейл ответ</message>
+	<message key="comments.email">Адрес отправителя</message>
+	<message key="comments.emailReply">Ответить по E-mail</message>
 	<message key="comments.enterComment">Послать комментарий</message>
 	<message key="comments.inResponseTo">По поводу <![CDATA[<a href="]]>{$url}<![CDATA[">]]>{$title}<![CDATA[</a>]]></message>
 	<message key="comments.name">Имя комментатора</message>
@@ -31,63 +32,94 @@
 	<message key="comments.readerComments">Комментарии читателей</message>
 	<message key="comments.readMore">Читать дальше</message>
 	<message key="comments.replies">Ответы</message>
-	<message key="comments.title">Название</message>
+	<message key="comments.title">Тема</message>
 	<message key="comments.viewAllComments">Посмотреть все комментарии</message>
 	<message key="reader.fullText">Полный текст:</message>
 	<message key="rt.addComment">Добавить комментарий</message>
 	<message key="rt.admin.configuration">Конфигурация</message>
-	<message key="rt.admin.contexts.confirmDelete">Are you sure you wish to delete this Context and all associated Searches?</message>
-	<message key="rt.admin.contexts.createContext">Create Context</message>
-	<message key="rt.admin.contexts.edit.editContext">Edit Context</message>
-	<message key="rt.admin.contexts.metadata">Metadata</message>
-	<message key="rt.admin.contexts.options.authorTerms">Use author names as default search terms to enable users to find other works by the authors for this item (e.g., for an "Other Works" context)</message>
-	<message key="rt.admin.contexts.options.defineTerms"><![CDATA[Use the word highlighted by the reader as default search term or be left blank if none has been selected for this item (e.g., for a "Define Terms" context). The "Define Terms" option must be enabled in the <a href="{$requestPageUrl}/settings">RST Settings</a> to allow double-clicking on words to open this context.]]></message>
-	<message key="rt.admin.contexts.options">Options</message>
+	<message key="rt.admin.contexts.confirmDelete">Уверены, что хотите удалить этот контекст и все ассоциированные Результаты Поиска?</message>
+	<message key="rt.admin.contexts.createContext">Создать Контекст</message>
+	<message key="rt.admin.contexts.edit.editContext">Редактировать Контекст</message>
+	<message key="rt.admin.contexts.metadata">Метаданные</message>
+	<message key="rt.admin.contexts.options.authorTerms">Использовать имена авторов как ключевые слова для поиска, чтобы позволить пользователям найти другие работы авторов (например для контекста "Другие Работы")</message>
+	<message key="rt.admin.contexts.options.citedBy">Использовать имена авторов как ключевые слова для поиска и определить контекст как поиск ссылок на статью.</message>
+	<message key="rt.admin.contexts.options.defineTerms"><![CDATA[Использовать слово, выделенное читателем, как ключевое слово для поиска или оставить пустым, если ничего не было выбрано (например для контекста "Определить Термины"). Опция "Определить Термины" должны быть включена в <a href="{$requestPageUrl}/settings">настройках</a> для того, чтобы двойное нажатие на слова открывало этот контекст.]]></message>
+	<message key="rt.admin.contexts.options.geoTerms">Использовать географические данные как ключевые слова для поиска.</message>
+	<message key="rt.admin.contexts.options">Настройки</message>
 	<message key="rt.admin.management">Управление</message>
-	<message key="rt.admin.searches.confirmDelete">Are you sure you wish to delete this Search?</message>
-	<message key="rt.admin.searches.createSearch">Create Search</message>
-	<message key="rt.admin.searches.edit.editSearch">Edit Search</message>
-	<message key="rt.admin.selectedVersion">Версия</message>
-	<message key="rt.admin.settings.authorBio">Посмотреть биоданные автора (Displays the bio statements entered by the author)</message>
-	<message key="rt.admin.settings.captureCite">Цитаты (Показывает цитату из статьи в стандартном формате при помощи следующего софтвера: EndNote, Reference Manager, and ProCite)</message>
-	<message key="rt.admin.settings.defineTerms">Поиск слова (Enables readers to double-click on any word in an item and send the word to a dictionary)</message>
-	<message key="rt.admin.settings.emailAuthor">Отправить мейл автору (Takes readers to an email template with the author's email)</message>
-	<message key="rt.admin.settings.emailOthers">Послать статью коллеге (Takes readers to an email template with the title of item as its subject)</message>
-	<message key="rt.admin.settings.supplementaryFiles">Дополнительные файлы (Displays a list of any supplementary files that the author included with an item)</message>
-	<message key="rt.admin.settings.viewMetadata">Посмотреть метаданные статьи (Displays an item's indexing information generated by the author and the system)</message>
+	
+	<message key="rt.admin.sharing">Рекомендации</message>
+	<message key="rt.admin.sharing.enabled">Рекомендации включены</message>
+	<message key="rt.admin.sharing.description"><![CDATA[Чтобы дать Вашим читателям возможность рекомендовать статьи друг другу, а так же другим пользователям интернет, зарегистрируйтесь на <a href="http://addthis.com">addthis.com</a> и вставьте полученный там код кнопки "Sharing" ниже.]]></message>
+	
+	<message key="rt.admin.sharing.basic">Основные настройки</message>
+	<message key="rt.admin.sharing.userNameLabel">имя пользователя AddThis.com</message>
+	<message key="rt.admin.sharing.buttonStyleLabel">Стиль кнопки</message>
+	<message key="rt.admin.sharing.dropDownMenuLabel">Использовать выпадающее меню</message>
+	<message key="rt.admin.sharing.advanced">Дополнительные настройки</message>
+	<message key="rt.admin.sharing.customizationLink"><![CDATA[См. <a href="http://www.addthis.com/help/customize/custom-button/">документациб по настройке AddThis.com</a>.]]></message>
+	<message key="rt.admin.sharing.brandLabel">Бренд</message>
+	<message key="rt.admin.sharing.dropDownLabel"><![CDATA[Опции выпадающего меню <br /> (список, разделенный запятыми)]]></message>
+	<message key="rt.admin.sharing.languageLabel">Язык</message>
+	<message key="rt.admin.sharing.logolabel">Логотип</message>
+	<message key="rt.admin.sharing.logoBackgroundLabel">Фон логотипа</message>
+	<message key="rt.admin.sharing.logoColorLabel">Цвет логотипа</message>
+	
+	<message key="rt.admin.readingToolsEnabled">Инструменты читателя</message>
+	<message key="rt.admin.searches.confirmDelete">Вы уверены, что хотите удалить эти результаты поиска ?</message>
+	<message key="rt.admin.searches.createSearch">Создать поиск</message>
+	<message key="rt.admin.searches.edit.editSearch">Редактировать поиск</message>
+	<message key="rt.admin.selectedVersion">Подобное</message>
+	<message key="rt.admin.settings.abstract">Резюме (представляет резюме статьи).</message>
+	<message key="rt.admin.settings.authorBio">Посмотреть биографические данные автора (показывает биографию, как ее ввел автор при отправке статьи)</message>
+	<message key="rt.admin.settings.captureCite">Цитаты (Показывает цитату из статьи в форматах: EndNote, Reference Manager, and ProCite)</message>
+	<message key="rt.admin.settings.defineTerms">Поиск слова (дает читателям возможность вызова словаря двойным щелчком мышью на любом слове)</message>
+	<message key="rt.admin.settings.disableRelatedItems">Выключить отображение подобного</message>
+	<message key="rt.admin.settings.emailAuthor">Отправить письмо автору (Открывает шаблон письма для отправки на электронный адрес автора)</message>
+	<message key="rt.admin.settings.emailOthers">Послать статью коллеге (Открывает шаблон письма с названием статьи в поле "Тема")</message>
+	<message key="rt.admin.settings.findingReferences">Найти ссылки</message>
+	<message key="rt.admin.settings.printerFriendly">Версия для печати (отображает версию статьи, удобную для печати).</message>
+	<message key="rt.admin.settings.supplementaryFiles">Дополнительные файлы (Показывает список дополнительных файлов, отправленных автором вместе со статьей)</message>
+	<message key="rt.admin.settings.viewMetadata">Посмотреть метаданные статьи (Показывает информацию о статье, введенную автором и сгенерированную системой)</message>
 	<message key="rt.admin.status">Статус</message>
-	<message key="rt.admin.validateUrls.complete">Validation complete.</message>
-	<message key="rt.admin.validateUrls.ok">OK</message>
-	<message key="rt.admin.validateUrls.urlIsInvalid">{$url} is not valid.</message>
-	<message key="rt.admin.validateUrls">Validate URLs</message>
-	<message key="rt.admin.validateUrls.validate">Validate</message>
-	<message key="rt.admin.versions.confirmDelete">Are you sure you wish to delete this Version and all associated Contexts and Searches?</message>
-	<message key="rt.admin.versions.confirmRestore">Are you sure you wish to irreversibly restore all versions to their defaults? If so, you will need to choose an active Version on the Settings page.</message>
-	<message key="rt.admin.versions.createVersion">Create Version</message>
-	<message key="rt.admin.versions.edit.editVersion">Edit Version</message>
-	<message key="rt.admin.versions.export">Export</message>
-	<message key="rt.admin.versions.importVersion">Import Version</message>
-	<message key="rt.admin.versions.metadata">Metadata</message>
-	<message key="rt.admin.versions.restoreVersions">Restore Versions to Defaults</message>
-	<message key="rt.authorBio">Данные об авторе</message>
-	<message key="rt.captureCite">Цитата</message>
+	<message key="rt.admin.configureSharing">Настроить рекомендации AddThis</message>
+	<message key="rt.admin.validateUrls.complete">Проверка завершена.</message>
+	<message key="rt.admin.validateUrls.ok">Все верно</message>
+	<message key="rt.admin.validateUrls.urlIsInvalid">{$url} неверна.</message>
+	<message key="rt.admin.validateUrls">Проверить ссылки</message>
+	<message key="rt.admin.validateUrls.validate">Проверить</message>
+	<message key="rt.admin.versions.confirmDelete">Уверены, что хотите удалить эту Версию и все ассоциированные Контексты и Поиски?</message>
+	<message key="rt.admin.versions.confirmRestore">Уверены, что хотите вернуть все версии к их стандартным параметрам? Если да, нужно выбрать активную Версию на странице Настроек.</message>
+	<message key="rt.admin.versions.createVersion">Создать Версию</message>
+	<message key="rt.admin.versions.edit.editVersion">Редактировать Версию</message>
+	<message key="rt.admin.versions.export">Экспортировать</message>
+	<message key="rt.admin.versions.importVersion">Импортировать Версию</message>
+	<message key="rt.admin.versions.metadata">Метаданные</message>
+	<message key="rt.admin.versions.restoreVersions">Вернуть Версии к Стандартным</message>
+	<message key="rt.authorBio">Об авторе</message>
+	<message key="rt.captureCite.format">Формат Ссылки</message>
+	<message key="rt.captureCite">Как ссылаться</message>
 	<message key="rt.captureCite.online">Онлайн</message>
-	<message key="rt.colleague">Послать линк коллеге</message>
+	<message key="rt.colleague">Уведомить коллегу</message>
 	<message key="rt.context.abbrev">Сокращение</message>
 	<message key="rt.context.and">AND</message>
+	<message key="rt.context.citesContextDescription">Если статья индексируется Google Scholar, ее могут сопровождать ссылки вида "Cited by X", которые ведут к списку работ, ссылающихся на данную. Так же, Google Scholar перечислит статьи, где содержится название статьи и автор. Для доступа к онлайн-ресурсам, доступным только через Вашу библиотеку, может быть необходимым войти в Scholar Preferences в Google Scholar и активировать Library Links для Вашей организации.</message>
 	<message key="rt.context">Контекст</message>
-	<message key="rt.context.defineTermsDescription">Double click on any word in the text and it will appear in the Word-to-Define box. You can also type or paste a word into the box. Then use the search function to find a definition for the word. To learn more about the resource searched, click on the information symbol. These resources have been selected because of their relevance and their open (free) access to all or part of their contents.</message>
+	<message key="rt.context.defineTermsDescription">Щелкните дважды на любом слове в тексте и оно появится в поле Термин (слово можно там и просто набрать или скопировать). Потом воспользуйтесь поиском, чтобы найти описание слова. Нажав на символ i Вы получите информацию относительно использованного источника. Эти источники были выбраны по принципу их полноты и свободного (бесплатного) доступа.</message>
 	<message key="rt.context.description">Описание</message>
 	<message key="rt.context.order">Порядок</message>
 	<message key="rt.contexts">Контексты</message>
-	<message key="rt.context.searchDescription">Ключевые слова выбраны автором и могут быть изменены читателем. To learn more about the resource searched, click on the information symbol. These resources have been selected because of their relevance and their open (free) access to all or part of their contents.</message>
+	<message key="rt.context.searchDescription">Ключевые слова (два или три коротких термина или фразы, наиболее полезные при поиске данной статьи) выбраны автором и могут быть изменены читателем. Нажав ABOUT можно узнать больше об использованных источниках. Эти источники были выбраны по принципу их полноты и свободного (бесплатного) доступа.</message>
 	<message key="rt.context.searchTerms">Ключевые слова</message>
 	<message key="rt.context.termToDefine">Термин</message>
 	<message key="rt.context.title">Название</message>
 	<message key="rt.emailAuthor">Связаться с автором</message>
 	<message key="rt.email.needLogin"><![CDATA[* Нужна <a target="_parent" href="{$pageUrl}/user/register">регистрация</a>]]></message>
 	<message key="rt.email.sent">Ваше сообщение отправлено.</message>
-	<message key="rt.lookUp">Поиск слова</message>
+	<message key="rt.findingReferences">Поиск ссылок</message>
+	<message key="rt.findingReferences.googleScholar">Google Scholar</message>
+	<message key="rt.findingReferences.windowsLiveAcademic">Windows Live Academic</message>
+	<message key="rt.lookUp">Поиск термина</message>
 	<message key="rt.metadata.dublinCore.contributor">Контрибьютор</message>
 	<message key="rt.metadata.dublinCore.coverage">Покрытие</message>
 	<message key="rt.metadata.dublinCore.date">Дата</message>
@@ -125,12 +157,14 @@
 	<message key="rt.printVersion">Версия для печати</message>
 	<message key="rt.readingTools">Инструменты</message>
 	<message key="rt.relatedItems">Найти похожие статьи</message>
+	<message key="rt.reviewPolicy">Тип рецензирования</message>
 	<message key="rt.search.description">Описание</message>
-	<message key="rt.searches">Поски</message>
+	<message key="rt.searches">Результаты поисков</message>
 	<message key="rt.search.order">Порядок</message>
 	<message key="rt.search">Поиск</message>
 	<message key="rt.search.searchPost">Данные</message>
-	<message key="rt.search.searchUrl">Поиск URL</message>
+	<message key="rt.search.searchUrl">URL</message>
+	<message key="rt.search.suggest">Советовать источник</message>
 	<message key="rt.search.title">Название</message>
 	<message key="rt.search.url">URL</message>
 	<message key="rt.suppFiles.download">Скачать</message>
